[gd_scene load_steps=15 format=2]

[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Sprites/Spirits/spirits_red.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Spirits/Red_Spirit.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Sprites/Spirits/spirits_red_death.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 25, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 75, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 25, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 75, 0, 25, 31 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 16.0

[node name="Red_Spirit" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
shape = SubResource( 6 )

[node name="Health_Bar" parent="." instance=ExtResource( 1 )]
margin_left = -51.0
margin_top = -19.0
margin_right = 49.0
margin_bottom = 21.0
rect_scale = Vector2( 0.3, 0.5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -1, 11 )

[node name="knockback" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="knockback" to="." method="_on_knockback_timeout"]
